Added 3rd party API call to service, also updated description in swagger .yaml file
